# promptdev

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mistral  Makefile  README.md  config.toml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
ansible/: deploy.yml  inventory.yml
db/: db.py
docs/: DEPLOYMENT.md  QUICKSTART.md  UPDATE_SUMMARY.md  admin_guide.md  memory_architecture.md  operator_guide.md
migrations/: 000_schema_migrations.sql  001_init.sql  002_prompts_schema.sql  003_guardrails_schema.sql  004_telemetry_schema.sql  005_personality_tracking.sql  006_seed_default_template.sql  008_multi_tenant.sql  009_fix_tenant_indexes.sql  010_end_users.sql  011_fix_null_tenant_constraints.sql  012_chat_sessions.sql  013_sentiment.sql  014_archived.sql  clean_chat_schema.sql  docker-compose.yml  fix_chat_schema.sql
scripts/: bootstrap_db.sql  bootstrap_test_db.sql  create_admin.py  create_test_db.sh  deploy.sh  inspect_db.py  migrate.py  reset_test_db.sh  run_mistral_local.sh  setup_env.sh
sentiment-analysis/: .gitignore  README.md  pyproject.toml
sentiment-analysis/app/: model.py  model_relational.py
sentiment-analysis/data/: emotions.json  groups.json
sentiment-analysis/tests/: test_model_relational.py
src/: auth.py  config.py  context.py  guardrails.py  llm_client.py  main.py  memory.py  prompts.py  sentiment.py  telemetry.py
static/: dashboard.html  editor.html  index.html  index.html.bk  login.html  monitor.html  template-manager.html
tests/: conftest.py  smoke.yml  test_api_isolation.py  test_auth.py  test_config.py  test_context.py  test_db.py  test_db_remote.py  test_guardrails.py  test_integration_e2e.py  test_llm_client.py  test_main.py  test_memory.py  test_model_sentiment.py  test_prompts.py  test_telemetry.py  test_tenant_isolation.py  test_testcontainer.py
(+4 files in other folders)
