[project]
name = "promptdev"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "psycopg2-binary",
    "prometheus-client",
    "pytest",
    "python-dotenv",
    "pydantic",
    "testcontainers[postgres]>=4.13.3",
    "jinja2",
    "pytest-asyncio",
    "bcrypt>=4.0.0",
    "itsdangerous>=2.0.0",
    "pyjwt>=2.10.1",
]
[project.optional-dependencies]
test = [
    "numpy>=2.4.1",
    "torch>=2.9.1",
    "transformers>=4.57.5",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.*",
]
